fixing theme on mobile

--- a/style.css
+++ b/style.css
@@ -4,4 +4,10 @@
 
 *{
     font-family: "Poppins", sans-serif;
+    
+}
+
+
+body{
+    background-color: white;
 }
